--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Allows business owner to view and manage the departments, roles, and employees in the company",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/server.js",
     "build": "tsc",
     "dev": "cross-env NODE_ENV=development ts-node src/index.ts",
     "test": "echo \"No tests specified\" && exit 0",
@@ -12,7 +12,8 @@
     "seed": "node src/db/seed.js",
     "lint": "eslint . --ext .ts",
     "watch": "tsc --watch",
-    "start:prod": "NODE_ENV=production node dist/index.js"
+    "start:prod": "NODE_ENV=production node dist/index.js",
+    "demo": "npm run build && node dist/demo.js"
   },
   "dependencies": {
     "cli-table3": "^0.6.0",
